# service-fabric-cs

./: .gitignore  CMakeLists.txt  README.md  dirs.proj  global.json
src/ServiceFabric/: NativeMethods.json  NativeMethods.txt  Program.cs  ServiceFabric.csproj
src/examples/: Program.cs  examples.csproj
